--- a/index.html
+++ b/index.html
@@ -3655,52 +3655,52 @@
 이름: 존재하지 않는 공간 초성: ㅈㅈㅎㅈㅇㄴㄱㄱ 범주: 필드 힌트: 리멘<BR>
 
 <!-- 6차 스킬(분류 귀찮음) -->
-이름: 스피릿 칼리버 초성: ㅅㅍㄹㅋㄹㅂ 범주: 스킬 힌트: 전사
-이름: 세이크리드 바스티온 초성: ㅅㅇㅋㄹㄷㅂㅅㅌㅇ 범주: 스킬 힌트: 전사
-이름: 데드 스페이스 초성: ㄷㄷㅅㅍㅇㅅ 범주: 스킬 힌트: 전사
-이름: 듀란달 초성: ㄷㄹㄷ 범주: 스킬 힌트: 전사
-이름: 아스트랄 블리츠 초성: ㅇㅅㅌㄹㅂㄹㅊ 범주: 스킬 힌트: 전사
-이름: 아드레날린 서지 초성: ㅇㄷㄹㄴㄹㅅㅈ 범주: 스킬 힌트: 전사
-이름: 파이널 디스트로이어 초성: ㅍㅇㄴㄷㅅㅌㄹㅇㅇ 범주: 스킬 힌트: 전사
-이름: 나이트메어 초성: ㄴㅇㅌㅁㅇ 범주: 스킬 힌트: 전사
-이름: 레퀴엠 초성: ㄹㅋㅇ 범주: 스킬 힌트: 전사
-이름: 마이트 오브 노바 초성: ㅁㅇㅌㅇㅂㄴㅂ 범주: 스킬 힌트: 전사
-이름: 마에스트로 초성: ㅁㅇㅅㅌㄹ 범주: 스킬 힌트: 전사
-이름: 크로노 트리거 초성: ㅋㄹㄴㅌㄹㄱ 범주: 스킬 힌트: 전사
-이름: 인페르날 베놈 초성: ㅇㅍㄹㄴㅂㄴ 범주: 스킬 힌트: 마법사
-이름: 프로즌 라이트닝 초성: ㅍㄹㅈㄹㅇㅌㄴ 범주: 스킬 힌트: 마법사
-이름: 홀리 어드밴트 초성: ㅎㄹㅇㄷㅂㅌ 범주: 스킬 힌트: 마법사
-이름: 이터니티 초성: ㅇㅌㄴㅌ 범주: 스킬 힌트: 마법사
-이름: 조디악 버스트 초성: ㅈㄷㅇㅂㅅㅌ 범주: 스킬 힌트: 마법사
-이름: 하모닉 패러독스 초성: ㅎㅁㄴㅍㄹㄷㅅ 범주: 스킬 힌트: 마법사
-이름: 크림슨 팩텀 초성: ㅋㄹㅅㅍㅌ 범주: 스킬 힌트: 마법사
-이름: 언리미티드 크리스탈 초성: ㅇㄹㅁㅌㄷㅋㄹㅅㅌ 범주: 스킬 힌트: 마법사
-이름: 어나더 렐름 초성: ㅇㄴㄷㄹㄹ 범주: 스킬 힌트: 마법사
-이름: 새록새록 꽃누리 초성: ㅅㄹㅅㄹㄲㄴㄹ 범주: 스킬 힌트: 마법사
-이름: 어센던트 셰이드 초성: ㅇㅅㄷㅌㅅㅇㄷ 범주: 스킬 힌트: 궁수
-이름: 파이널 에임 초성: ㅍㅇㄴㅇㅇ 범주: 스킬 힌트: 궁수
-이름: 포세이큰 렐릭 초성: ㅍㅅㅇㅋㄹㄹ 범주: 스킬 힌트: 궁수
-이름: 미스트랄 스프링 초성: ㅁㅅㅌㄹㅅㅍㄹ 범주: 스킬 힌트: 궁수
-이름: 언페이딩 글로리 초성: ㅇㅍㅇㄷㄱㄹㄹ 범주: 스킬 힌트: 궁수
-이름: 네이쳐스 빌리프 초성: ㄴㅇㅊㅅㅂㄹㅍ 범주: 스킬 힌트: 궁수
-이름: 어나일레이션 초성: ㅇㄴㅇㄹㅇㅅ 범주: 스킬 힌트: 궁수
-이름: 생사여탈 초성: ㅅㅅㅇㅌ 범주: 스킬 힌트: 도적
-이름: 일도양단 초성: ㅇㄷㅇㄷ 범주: 스킬 힌트: 도적
-이름: 카르마 블레이드 초성: ㅋㄹㅁㅂㄹㅇㄷ 범주: 스킬 힌트: 도적
-이름: 사일런스 초성: ㅅㅇㄹㅅ 범주: 스킬 힌트: 도적
-이름: 디파잉 페이트 초성: ㄷㅍㅇㅍㅇㅌ 범주: 스킬 힌트: 도적
-이름: 아티피셜 에볼루션 초성: ㅇㅌㅍㅅㅇㅂㄹㅅ 범주: 스킬 힌트: 도적
-이름: 체인아츠: 매서커 초성: ㅊㅇㅇㅊㅁㅅㅋ (특문) 범주: 스킬 힌트: 도적
-이름: 헥스: 샌드스톰 초성: ㅎㅅㅅㄷㅅㅌ (특문) 범주: 스킬 힌트: 도적
-이름: 선기: 파천왕 초성: ㅅㄱㅍㅊㅇ (특문) 범주: 스킬 힌트: 도적
-이름: 리버레이트 냅투누스 초성: ㄹㅂㄹㅇㅌㄴㅌㄴㅅ 범주: 스킬 힌트: 해적
-이름: 드레드노트 초성: ㄷㄹㄷㄴㅌ 범주: 스킬 힌트: 해적
-이름: 슈퍼 캐논 익스플로 초성: ㅅㅍㅋㄴㅇㅅㅍㄹ 범주: 스킬 힌트: 해적
-이름: 뇌명벽해파 초성: ㄴㅁㅂㅎㅍ 범주: 스킬 힌트: 해적
-이름: 호신강림 초성: ㅎㅅㄱㄹ 범주: 스킬 힌트: 해적
-이름: 그라운드 제로 초성: ㄱㄹㅇㄷㅈㄹ 범주: 스킬 힌트: 해적
-이름: 그랜드 피날레 초성: ㄱㄹㄷㅍㄴㄹ 범주: 스킬 힌트: 해적
-이름: 가장 오래된 심연 초성: ㄱㅈㅇㄹㄷㅅㅇ 범주: 스킬 힌트: 해적
+이름: 스피릿 칼리버 초성: ㅅㅍㄹㅋㄹㅂ 범주: 스킬 힌트: 전사<BR>
+이름: 세이크리드 바스티온 초성: ㅅㅇㅋㄹㄷㅂㅅㅌㅇ 범주: 스킬 힌트: 전사<BR>
+이름: 데드 스페이스 초성: ㄷㄷㅅㅍㅇㅅ 범주: 스킬 힌트: 전사<BR>
+이름: 듀란달 초성: ㄷㄹㄷ 범주: 스킬 힌트: 전사<BR>
+이름: 아스트랄 블리츠 초성: ㅇㅅㅌㄹㅂㄹㅊ 범주: 스킬 힌트: 전사<BR>
+이름: 아드레날린 서지 초성: ㅇㄷㄹㄴㄹㅅㅈ 범주: 스킬 힌트: 전사<BR>
+이름: 파이널 디스트로이어 초성: ㅍㅇㄴㄷㅅㅌㄹㅇㅇ 범주: 스킬 힌트: 전사<BR>
+이름: 나이트메어 초성: ㄴㅇㅌㅁㅇ 범주: 스킬 힌트: 전사<BR>
+이름: 레퀴엠 초성: ㄹㅋㅇ 범주: 스킬 힌트: 전사<BR>
+이름: 마이트 오브 노바 초성: ㅁㅇㅌㅇㅂㄴㅂ 범주: 스킬 힌트: 전사<BR>
+이름: 마에스트로 초성: ㅁㅇㅅㅌㄹ 범주: 스킬 힌트: 전사<BR>
+이름: 크로노 트리거 초성: ㅋㄹㄴㅌㄹㄱ 범주: 스킬 힌트: 전사<BR>
+이름: 인페르날 베놈 초성: ㅇㅍㄹㄴㅂㄴ 범주: 스킬 힌트: 마법사<BR>
+이름: 프로즌 라이트닝 초성: ㅍㄹㅈㄹㅇㅌㄴ 범주: 스킬 힌트: 마법사<BR>
+이름: 홀리 어드밴트 초성: ㅎㄹㅇㄷㅂㅌ 범주: 스킬 힌트: 마법사<BR>
+이름: 이터니티 초성: ㅇㅌㄴㅌ 범주: 스킬 힌트: 마법사<BR>
+이름: 조디악 버스트 초성: ㅈㄷㅇㅂㅅㅌ 범주: 스킬 힌트: 마법사<BR>
+이름: 하모닉 패러독스 초성: ㅎㅁㄴㅍㄹㄷㅅ 범주: 스킬 힌트: 마법사<BR>
+이름: 크림슨 팩텀 초성: ㅋㄹㅅㅍㅌ 범주: 스킬 힌트: 마법사<BR>
+이름: 언리미티드 크리스탈 초성: ㅇㄹㅁㅌㄷㅋㄹㅅㅌ 범주: 스킬 힌트: 마법사<BR>
+이름: 어나더 렐름 초성: ㅇㄴㄷㄹㄹ 범주: 스킬 힌트: 마법사<BR>
+이름: 새록새록 꽃누리 초성: ㅅㄹㅅㄹㄲㄴㄹ 범주: 스킬 힌트: 마법사<BR>
+이름: 어센던트 셰이드 초성: ㅇㅅㄷㅌㅅㅇㄷ 범주: 스킬 힌트: 궁수<BR>
+이름: 파이널 에임 초성: ㅍㅇㄴㅇㅇ 범주: 스킬 힌트: 궁수<BR>
+이름: 포세이큰 렐릭 초성: ㅍㅅㅇㅋㄹㄹ 범주: 스킬 힌트: 궁수<BR>
+이름: 미스트랄 스프링 초성: ㅁㅅㅌㄹㅅㅍㄹ 범주: 스킬 힌트: 궁수<BR>
+이름: 언페이딩 글로리 초성: ㅇㅍㅇㄷㄱㄹㄹ 범주: 스킬 힌트: 궁수<BR>
+이름: 네이쳐스 빌리프 초성: ㄴㅇㅊㅅㅂㄹㅍ 범주: 스킬 힌트: 궁수<BR>
+이름: 어나일레이션 초성: ㅇㄴㅇㄹㅇㅅ 범주: 스킬 힌트: 궁수<BR>
+이름: 생사여탈 초성: ㅅㅅㅇㅌ 범주: 스킬 힌트: 도적<BR>
+이름: 일도양단 초성: ㅇㄷㅇㄷ 범주: 스킬 힌트: 도적<BR>
+이름: 카르마 블레이드 초성: ㅋㄹㅁㅂㄹㅇㄷ 범주: 스킬 힌트: 도적<BR>
+이름: 사일런스 초성: ㅅㅇㄹㅅ 범주: 스킬 힌트: 도적<BR>
+이름: 디파잉 페이트 초성: ㄷㅍㅇㅍㅇㅌ 범주: 스킬 힌트: 도적<BR>
+이름: 아티피셜 에볼루션 초성: ㅇㅌㅍㅅㅇㅂㄹㅅ 범주: 스킬 힌트: 도적<BR>
+이름: 체인아츠: 매서커 초성: ㅊㅇㅇㅊㅁㅅㅋ (특문) 범주: 스킬 힌트: 도적<BR>
+이름: 헥스: 샌드스톰 초성: ㅎㅅㅅㄷㅅㅌ (특문) 범주: 스킬 힌트: 도적<BR>
+이름: 선기: 파천왕 초성: ㅅㄱㅍㅊㅇ (특문) 범주: 스킬 힌트: 도적<BR>
+이름: 리버레이트 냅투누스 초성: ㄹㅂㄹㅇㅌㄴㅌㄴㅅ 범주: 스킬 힌트: 해적<BR>
+이름: 드레드노트 초성: ㄷㄹㄷㄴㅌ 범주: 스킬 힌트: 해적<BR>
+이름: 슈퍼 캐논 익스플로 초성: ㅅㅍㅋㄴㅇㅅㅍㄹ 범주: 스킬 힌트: 해적<BR>
+이름: 뇌명벽해파 초성: ㄴㅁㅂㅎㅍ 범주: 스킬 힌트: 해적<BR>
+이름: 호신강림 초성: ㅎㅅㄱㄹ 범주: 스킬 힌트: 해적<BR>
+이름: 그라운드 제로 초성: ㄱㄹㅇㄷㅈㄹ 범주: 스킬 힌트: 해적<BR>
+이름: 그랜드 피날레 초성: ㄱㄹㄷㅍㄴㄹ 범주: 스킬 힌트: 해적<BR>
+이름: 가장 오래된 심연 초성: ㄱㅈㅇㄹㄷㅅㅇ 범주: 스킬 힌트: 해적<BR>
 
   
 </BODY>
