--- a/index.html
+++ b/index.html
@@ -1638,8 +1638,7 @@
 이름: 마오 초성: ㅁㅇ 범주: NPC 힌트: 크리스탈 가든<BR>
 이름: 크리스틴 초성: ㅋㄹㅅㅌ 범주: NPC 힌트: 크리스탈 가든<BR>
 
-<!-- 스킬 -->
-<!-- 직업군별 공용 스킬 -->
+직업명: 공용<BR>
 이름: 메이플 용사 초성: ㅁㅇㅍㅇㅅ 범주: 스킬 힌트: 공용<BR>
 이름: 시그너스 나이츠 초성: ㅅㄱㄴㅅㄴㅇㅊ 범주: 스킬 힌트: 공용<BR>
 이름: 노바의 용사 초성: ㄴㅂㅇㅇㅅ 범주: 스킬 힌트: 공용<BR>
@@ -1670,7 +1669,7 @@
 이름: 민첩한 몸놀림 초성: ㅁㅊㅎㅁㄴㄹ 범주: 스킬 힌트: 근본<BR>
 이름: 리턴 투 메이플 초성: ㄹㅌㅌㅁㅇㅍ 범주: 스킬 힌트: 근본<BR>  
 
-<!-- 모험가 1차 스킬 -->
+직업명: 모험가<BR>
 이름: 인빈서블 빌리프 초성: ㅇㅂㅅㅂㅂㄹㅍ 범주: 스킬 힌트: 전사<BR>
 이름: 슬래시 블러스트 초성: ㅅㄹㅅㅂㄹㅅㅌ 범주: 스킬 힌트: 전사<BR>
 이름: 워리어 리프 초성: ㅇㄹㅇㄹㅍ 범주: 스킬 힌트: 전사<BR>
@@ -1705,7 +1704,7 @@
 이름: 크리티컬 로어 초성: ㅋㄹㅌㅋㄹㅇ 범주: 스킬 힌트: 해적<BR>
 이름: 퀵모션 초성: ㅋㅁㅅ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 모험가 전사: 히어로 -->
+직업명: 히어로<BR>
 이름: 브랜디쉬 초성: ㅂㄹㄷㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 플래시 슬래시 초성: ㅍㄹㅅㅅㄹㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 콤보 어택 초성: ㅋㅂㅇㅌ 범주: 스킬 힌트: 전사<BR>
@@ -1732,7 +1731,7 @@
 이름: 콤보 인스팅트 초성: ㅋㅂㅇㅅㅌㅌ 범주: 스킬 힌트: 전사<BR>
 이름: 소드 일루전 초성: ㅅㄷㅇㄹㅈ 범주: 스킬 힌트: 전사<BR>
 
-<!-- 모험가 전사: 팔라딘 -->
+직업명: 팔라딘<BR>
 이름: 디바인 스윙 초성: ㄷㅂㅇㅅㅇ 범주: 스킬 힌트: 전사<BR>
 이름: 홀리 차지 초성: ㅎㄹㅊㅈ 범주: 스킬 힌트: 전사<BR>
 이름: 페이지 오더 초성: ㅍㅇㅈㅇㄷ 범주: 스킬 힌트: 전사<BR>
@@ -1759,7 +1758,7 @@
 이름: 그랜드 크로스 초성: ㄱㄹㄷㅋㄹㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 마이티 묠니르 초성: ㅁㅇㅌㅁㄴㄹ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 모험가 전사: 다크나이트 -->
+직업명: 다크나이트<BR>
 이름: 스피어 풀링 초성: ㅅㅍㅇㅍㄹ 범주: 스킬 힌트: 전사<BR>
 이름: 비홀더 초성: ㅂㅎㄷ 범주: 스킬 힌트: 전사<BR>
 이름: 비홀더 쇼크 초성: ㅂㅎㄷㅅㅋ 범주: 스킬 힌트: 전사<BR>
@@ -1785,7 +1784,7 @@
 이름: 피어스 사이클론 초성: ㅍㅇㅅㅅㅇㅋㄹ 범주: 스킬 힌트: 전사<BR>
 이름: 다크니스 오라 초성: ㄷㅋㄴㅅㅇㄹ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 모험가 마법사: 아크메이지 불독 -->
+직업명: 아크메이지 불독<BR>
 이름: 플레임 오브 초성: ㅍㄹㅇㅇㅂ 범주: 스킬 힌트: 마법사<BR>
 이름: 엘리멘탈 드레인 초성: ㅇㄹㅁㅌㄷㄹㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 포이즌 브레스 초성: ㅍㅇㅈㅂㄹㅅ 범주: 스킬 힌트: 마법사<BR>
@@ -1817,7 +1816,7 @@
 이름: 퓨리 오브 이프리트 초성: ㅍㄹㅇㅂㅇㅍㄹㅌ 범주: 스킬 힌트: 마법사<BR>
 이름: 포이즌 체인 초성: ㅍㅇㅈㅊㅇ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 모험가 마법사: 아크메이지 썬콜 -->
+직업명: 아크메이지 썬콜<BR>
 이름: 콜드 빔 초성: ㅋㄷㅂ 범주: 스킬 힌트: 마법사<BR>
 이름: 프리징 이펙트 초성: ㅍㄹㅈㅇㅍㅌ 범주: 스킬 힌트: 마법사<BR>
 이름: 썬더 볼트 초성: ㅆㄷㅂㅌ 범주: 스킬 힌트: 마법사<BR>
@@ -1839,7 +1838,7 @@
 이름: 스피릿 오브 스노우 초성: ㅅㅍㄹㅇㅂㅅㄴㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 주피터 썬더 초성: ㅈㅍㅌㅆㄷ 범주: 스킬 힌트: 마법사<BR>
 
-<!-- 비숍 -->
+직업명: 비숍<BR>
 이름: 홀리 애로우 초성: ㅎㄹㅇㄹㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 블레싱 앙상블 초성: ㅂㄹㅅㅇㅅㅂ 범주: 스킬 힌트: 마법사<BR>
 이름: 힐 초성: ㅎ 범주: 스킬 힌트: 마법사<BR>
@@ -1872,7 +1871,7 @@
 이름: 피스메이커 초성: ㅍㅅㅁㅇㅋ 범주: 스킬 힌트: 마법사<BR>
 이름: 디바인 퍼니시먼트 초성: ㄷㅂㅇㅍㄴㅅㅁㅌ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 모험가 궁수: 보우마스터 -->
+직업명: 보우마스터<BR>
 이름: 바람의 시 초성: ㅂㄹㅇㅅ 범주: 스킬 힌트: 궁수<BR>
 이름: 리트리트 샷 초성: ㄹㅌㄹㅌㅅ 범주: 스킬 힌트: 궁수<BR>
 이름: 퀴버 카트리지 초성: ㅋㅂㅋㅌㄹㅈ 범주: 스킬 힌트: 궁수<BR>
@@ -1897,7 +1896,7 @@
 이름: 퀴버 풀버스트 초성: ㅋㅂㅍㅂㅅㅌ 범주: 스킬 힌트: 궁수<BR>
 이름: 실루엣 미라주 초성: ㅅㄹㅇㅁㄹㅈ 범주: 스킬 힌트: 궁수<BR>
 
-<!-- 모험가 궁수: 신궁 -->
+직업명: 신궁<BR>
 이름: 피어싱 초성: ㅍㅇㅅ 범주: 스킬 힌트: 궁수<BR>
 이름: 인핸스 애로우 초성: ㅇㅎㅅㅇㄹㅇ 범주: 스킬 힌트: 궁수<BR>
 이름: 인핸스 피어싱 초성: ㅇㅎㅅㅍㅇㅅ 범주: 스킬 힌트: 궁수<BR>
@@ -1920,7 +1919,7 @@
 이름: 차지드 애로우 초성: ㅊㅈㄷㅇㄹㅇ 범주: 스킬 힌트: 궁수<BR>
 이름: 리피팅 크로스보우 카트리지 초성: ㄹㅍㅌㅋㄹㅅㅂㅇㅋㅌㄹㅈ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 모험가 궁수: 패스파인더 -->
+직업명: 패스파인더<BR>
 이름: 리턴 투 파르템 초성: ㄹㅌㅌㅍㄹㅌ 범주: 스킬 힌트: 궁수<BR>
 이름: 고대의 저주 초성: ㄱㄷㅇㅈㅈ 범주: 스킬 힌트: 궁수<BR>
 이름: 커스 위크닝 초성: ㅋㅅㅇㅋㄴ 범주: 스킬 힌트: 궁수<BR>
@@ -1950,7 +1949,7 @@
 이름: 옵시디언 배리어 초성: ㅇㅅㄷㅇㅂㄹㅇ 범주: 스킬 힌트: 궁수<BR>
 이름: 렐릭 언바운드 초성: ㄹㄹㅇㅂㅇㄷ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 모험가 도적: 나이트로드 -->
+직업명: 나이트로드<BR>
 이름: 슈리켄 버스트 초성: ㅅㄹㅋㅂㅅㅌ 범주: 스킬 힌트: 도적<BR>
 이름: 윈드 탈리스만 초성: ㅇㄷㅌㄹㅅㅁ 범주: 스킬 힌트: 도적<BR>
 이름: 마크 오브 어쌔신 초성: ㅁㅋㅇㅂㅇㅆㅅ 범주: 스킬 힌트: 도적<BR>
@@ -1981,7 +1980,7 @@
 이름: 다크로드의 비전서 초성: ㄷㅋㄹㄷㅇㅂㅈㅅ 범주: 스킬 힌트: 도적<BR>
 이름: 스로우 블래스팅 초성: ㅅㄹㅇㅂㄹㅅㅌ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 모험가 도적: 섀도어 -->
+직업명: 섀도어<BR>
 이름: 새비지 블로우 초성: ㅅㅂㅈㅂㄹㅇ 범주: 스킬 힌트: 도적<BR>
 이름: 크리티컬 엣지 초성: ㅋㄹㅌㅋㅇㅈ 범주: 스킬 힌트: 도적<BR>
 이름: 스틸 초성: ㅅㅌ 범주: 스킬 힌트: 도적<BR>
@@ -2008,7 +2007,7 @@
 이름: 소닉 블로우 초성: ㅅㄴㅂㄹㅇ 범주: 스킬 힌트: 도적<BR>
 이름: 멸귀참영진 초성: ㅁㄱㅊㅇㅈ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 모험가 도적: 듀얼블레이드 -->
+직업명: 듀얼블레이드<BR>
 이름: 재귀 초성: ㅈㄱ 범주: 스킬 힌트: 도적<BR>
 이름: 샤프 슬래시 초성: ㅅㅍㅅㄹㅅ 범주: 스킬 힌트: 도적<BR>
 이름: 사이드 스텝 초성: ㅅㅇㄷㅅㅌ 범주: 스킬 힌트: 도적<BR>
@@ -2039,7 +2038,7 @@
 이름: 블레이드 토네이도 초성: ㅂㄹㅇㄷㅌㄴㅇㄷ 범주: 스킬 힌트: 도적<BR>
 이름: 헌티드 엣지 초성: ㅎㅌㄷㅇㅈ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 모험가 해적: 바이퍼 -->
+직업명: 바이퍼<BR>
 이름: 쇼크 웨이브 초성: ㅅㅋㅇㅇㅂ 범주: 스킬 힌트: 해적<BR>
 이름: 볼텍스 점프 초성: ㅂㅌㅅㅈㅍ 범주: 스킬 힌트: 해적<BR>
 이름: 씨 서펜트 초성: ㅆㅅㅍㅌ 범주: 스킬 힌트: 해적<BR>
@@ -2074,7 +2073,7 @@
 이름: 퓨리어스 차지 초성: ㅍㄹㅇㅅㅊㅈ 범주: 스킬 힌트: 해적<BR>
 이름: 하울링 피스트 초성: ㅎㅇㄹㅍㅅㅌ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 모험가 해적: 캡틴 -->
+직업명: 캡틴<BR>
 이름: 매그넘 샷 초성: ㅁㄱㄴㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 스위프트 파이어 초성: ㅅㅇㅍㅌㅍㅇㅇ 범주: 스킬 힌트: 해적<BR>
 이름: 서먼 크루 초성: ㅅㅁㅋㄹ 범주: 스킬 힌트: 해적<BR>
@@ -2105,7 +2104,7 @@
 이름: 노틸러스 어썰트 초성: ㄴㅌㄹㅅㅇㅆㅌ 범주: 스킬 힌트: 해적<BR>
 이름: 데스 트리거 초성: ㄷㅅㅌㄹㄱ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 모험가 해적: 캐논슈터 -->
+직업명: 캐논슈터<BR>
 이름: 컴백홈 캐논 초성: ㅋㅂㅎㅋㄴ 범주: 스킬 힌트: 해적<BR>
 이름: 캐논 스플래셔 초성: ㅋㄴㅅㅍㄹㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 펀칭 캐논 초성: ㅍㅊㅋㄴ 범주: 스킬 힌트: 해적<BR>
@@ -2140,7 +2139,7 @@
 이름: 스페셜 몽키 에스코트 초성: ㅅㅍㅅㅁㅋㅇㅅㅋㅌ 범주: 스킬 힌트: 해적<BR>
 이름: 풀 메이커 초성: ㅍㅁㅇㅋ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 시그너스 1차 스킬 -->
+직업명: 시그너스 기사단<BR>
 이름: 엘리멘탈 슬래시 초성: ㅇㄹㅁㅌㅅㄹㅅ 범주: 스킬 힌트: 시그너스 기사단<BR>
 이름: 엘리멘탈 쉬프트 초성: ㅇㄹㅁㅌㅅㅍㅌ 범주: 스킬 힌트: 시그너스 기사단<BR>
 이름: 엘리멘탈 하모니 초성: ㅇㄹㅁㅌㅎㅁㄴ 범주: 스킬 힌트: 시그너스 기사단<BR>
@@ -2152,7 +2151,7 @@
 이름: 초월자 시그너스의 축복 초성: ㅊㅇㅈㅅㄱㄴㅅㅇㅊㅂ 범주: 스킬 힌트: 시그너스 기사단<BR>
 이름: 시그너스 팔랑크스 초성: ㅅㄱㄴㅅㅍㄹㅋㅅ 범주: 스킬 힌트: 시그너스 기사단<BR>
   
-<!-- 소울마스터 -->
+직업명: 소울마스터<BR>
 이름: 라이징 선 초성: ㄹㅇㅈㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 폴링 문 초성: ㅍㄹㅁ 범주: 스킬 힌트: 전사<BR>
 이름: 솔라 슬래시 초성: ㅅㄹㅅㄹㅅ 범주: 스킬 힌트: 전사<BR>
@@ -2189,7 +2188,7 @@
 이름: 여제의 기도 초성: ㅇㅈㅇㄱㄷ 범주: 스킬 힌트: 전사<BR>
 이름: 빛의 수호 초성: ㅂㅇㅅㅎ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 미하일 -->
+직업명: 미하일<BR>
 이름: 샤이닝 피어스 초성: ㅅㅇㄴㅍㅇㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 로얄 가드 초성: ㄹㅇㄱㄷ 범주: 스킬 힌트: 전사<BR>
 이름: 소울 점프 초성: ㅅㅇㅈㅍ 범주: 스킬 힌트: 전사<BR>
@@ -2217,7 +2216,7 @@
 이름: 소드 오브 소울 라이트 초성: ㅅㄷㅇㅂㅅㅇㄹㅇㅌ 범주: 스킬 힌트: 전사<BR>
 이름: 라이트 오브 커리지 초성: ㄹㅇㅌㅇㅂㅋㄹㅈ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 플레임위자드 -->
+직업명: 플레임위자드<BR>
 이름: 오비탈 플레임 초성: ㅇㅂㅌㅍㄹㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 플레임 바이트 초성: ㅍㄹㅇㅂㅇㅌ 범주: 스킬 힌트: 마법사<BR>
 이름: 파이어워크 초성: ㅍㅇㅇㅇㅋ 범주: 스킬 힌트: 마법사<BR>
@@ -2247,7 +2246,7 @@
 이름: 인피니티 플레임 서클 초성: ㅇㅍㄴㅌㅍㄹㅇㅅㅋ 범주: 스킬 힌트: 마법사<BR>
 이름: 샐리맨더 미스칩 초성: ㅅㄹㅁㄷㅁㅅㅊ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 윈드브레이커 -->
+직업명: 윈드브레이커<BR>
 이름: 브리즈 애로우 초성: ㅂㄹㅈㅇㄹㅇ 범주: 스킬 힌트: 궁수<BR>
 이름: 윈드워크 초성: ㅇㄷㅇㅋ 범주: 스킬 힌트: 궁수<BR>
 이름: 거스트 쉬프트 초성: ㄱㅅㅌㅅㅍㅌ 범주: 스킬 힌트: 궁수<BR>
@@ -2275,7 +2274,7 @@
 이름: 윈드 월 초성: ㅇㄷㅇ 범주: 스킬 힌트: 궁수<BR>
 이름: 볼텍스 스피어 초성: ㅂㅌㅅㅅㅍㅇ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 나이트워커 -->
+직업명: 나이트워커<BR>
 이름: 쉐도우 배트 초성: ㅅㄷㅇㅂㅌ 범주: 스킬 힌트: 도적<BR>
 이름: 쉐도우 점프 초성: ㅅㄷㅇㅈㅍ 범주: 스킬 힌트: 도적<BR>
 이름: 래피드 이베이젼 초성: ㄹㅍㄷㅇㅂㅇㅈ 범주: 스킬 힌트: 도적<BR>
@@ -2302,7 +2301,7 @@
 이름: 쉐도우 바이트 초성: ㅅㄷㅇㅂㅇㅌ 범주: 스킬 힌트: 도적<BR>
 이름: 래피드 스로우 초성: ㄹㅍㄷㅅㄹㅇ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 스트라이커 -->
+직업명: 스트라이커<BR>
 이름: 충아 초성: ㅊㅇ 범주: 스킬 힌트: 해적<BR>
 이름: 섬광 초성: ㅅㄱ 범주: 스킬 힌트: 해적<BR>
 이름: 뇌인 초성: ㄴㅇ 범주: 스킬 힌트: 해적<BR>
@@ -2331,7 +2330,7 @@
 이름: 뇌신창격 초성: ㄴㅅㅊㄱ 범주: 스킬 힌트: 해적<BR>
 이름: 창뇌연격 초성: ㅊㄴㅇㄱ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 라라 -->
+직업명: 라라<BR>
 이름: 그란디스 여신의 축복 초성: ㄱㄹㄷㅅㅇㅅㅇㅊㅂ 범주: 스킬 힌트: 수인 누나 귀여움<BR>
 이름: 화중군자 초성: ㅎㅈㄱㅈ 범주: 스킬 힌트: 아니마<BR>
 이름: 나린으로! 초성: ㄴㄹㅇㄹ (특문) 범주: 스킬 힌트: 마법사<BR>
@@ -2377,7 +2376,7 @@
 이름: 용솟음치는 정기 초성: ㅇㅅㅇㅊㄴㅈㄱ 범주: 스킬 힌트: 마법사<BR>
 이름: 산등성이 굽이굽이 초성: ㅅㄷㅅㅇㄱㅇㄱㅇ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 호영 -->
+직업명: 호영<BR>
 이름: 청운회귀 초성: ㅊㅇㅎㄱ 범주: 스킬 힌트: 도적<BR>
 이름: 괴이봉인 초성: ㄱㅇㅂㅇ 범주: 스킬 힌트: 도적<BR>
 이름: 자신감 초성: ㅈㅅㄱ 범주: 스킬 힌트: 도적<BR>
@@ -2422,7 +2421,7 @@
 이름: 선기 : 강림 괴력난신 초성: ㅅㄱㄱㄹㄱㄹㄴㅅ (특문) 범주: 스킬 힌트: 도적<BR>
 이름: 선기 : 천지인 환영 초성: ㅅㄱㅊㅈㅇㅎㅇ (특문) 범주: 스킬 힌트: 도적<BR>
   
-<!-- 아델 -->
+직업명: 아델<BR>
 이름: 매직 서킷 풀드라이브 초성: ㅁㅈㅅㅋㅍㄷㄹㅇㅂ 범주: 스킬 힌트: 레프<BR>
 이름: 리비지테이션 초성: ㄹㅂㅈㅌㅇㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 패이스 초성: ㅍㅇㅅ 범주: 스킬 힌트: 전사<BR>
@@ -2468,7 +2467,7 @@
 이름: 리스토어 초성: ㄹㅅㅌㅇ 범주: 스킬 힌트: 전사<BR>
 이름: 스톰 초성: ㅅㅌ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 일리움 -->
+직업명: 일리움<BR>
 이름: 리턴 투 쉘터 초성: ㄹㅌㅌㅅㅌ 범주: 스킬 힌트: 마법사<BR>
 이름: 전투의 흐름 초성: ㅈㅌㅇㅎㄹ 범주: 스킬 힌트: 마법사<BR>
 이름: 크래프트:자벨린 초성: ㅋㄹㅍㅌㅈㅂㄹ (특문) 범주: 스킬 힌트: 마법사<BR>
@@ -2506,7 +2505,7 @@
 이름: 소울 오브 크리스탈 초성: ㅅㅇㅇㅂㅋㄹㅅㅌ 범주: 스킬 힌트: 마법사<BR>
 이름: 크리스탈 게이트 초성: ㅋㄹㅅㅌㄱㅇㅌ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 아크 -->
+직업명: 아크<BR>
 이름: 컨택트 카라반 초성: ㅋㅌㅌㅋㄹㅂ 범주: 스킬 힌트: 해적<BR>
 이름: 무아 초성: ㅁㅇ 범주: 스킬 힌트: 해적<BR>
 이름: 스펙터 잠식 초성: ㅅㅍㅌㅈㅅ 범주: 스킬 힌트: 해적<BR>
@@ -2549,7 +2548,7 @@
 이름: 새어 나오는 흉몽 초성: ㅅㅇㄴㅇㄴㅎㅁ 범주: 스킬 힌트: 해적<BR>
 이름: 영원히 굶주리는 짐승 초성: ㅇㅇㅎㄱㅈㄹㄴㅈㅅ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 레지스탕스 공용 -->
+직업명: 레지스탕스<BR>
 이름: 윌 오브 리버티 초성: ㅇㅇㅂㄹㅂㅌ 범주: 스킬 힌트: 레지스탕스<BR>
 이름: 크리스탈 스로우 초성: ㅋㄹㅅㅌㅅㄹㅇ 범주: 스킬 힌트: 레지스탕스<BR>
 이름: 잠입 초성: ㅈㅇ 범주: 스킬 힌트: 레지스탕스<BR>
@@ -2558,7 +2557,7 @@
 이름: 스피릿 오브 프리덤 초성: ㅅㅍㄹㅇㅂㅍㄹㄷ 범주: 스킬 힌트: 레지스탕스<BR>
 이름: 레지스탕스 라인 인팬트리 초성: ㄹㅈㅅㅌㅅㄹㅇㅇㅍㅌㄹ 범주: 스킬 힌트: 레지스탕스<BR>
   
-<!-- 블래스터 -->
+직업명: 블래스터<BR>
 이름: 매그넘 펀치 초성: ㅁㄱㄴㅍㅊ 범주: 스킬 힌트: 전사<BR>
 이름: 리볼빙 캐논 초성: ㄹㅂㅂㅋㄴ 범주: 스킬 힌트: 전사<BR>
 이름: 릴리즈 파일 벙커 초성: ㄹㄹㅈㅍㅇㅂㅋ 범주: 스킬 힌트: 전사<BR>
@@ -2589,7 +2588,7 @@
 이름: 버닝 브레이커 초성: ㅂㄴㅂㄹㅇㅋ 범주: 스킬 힌트: 전사<BR>
 이름: 애프터이미지 쇼크 초성: ㅇㅍㅌㅇㅁㅈㅅㅋ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 데몬슬레이어 -->
+직업명: 데몬슬레이어<BR>
 이름: 데몬 점프 초성: ㄷㅁㅈㅍ 범주: 스킬 힌트: 전사<BR>
 이름: 데몬스 퓨리 초성: ㄷㅁㅅㅍㄹ 범주: 스킬 힌트: 전사<BR>
 이름: 데모닉 블러드 초성: ㄷㅁㄴㅂㄹㄷ 범주: 스킬 힌트: 전사<BR>
@@ -2627,7 +2626,7 @@
 이름: 오르트로스 초성: ㅇㄹㅌㄹㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 데몬 베인 초성: ㄷㅁㅂㅇ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 데몬어벤져 -->
+직업명: 데몬어벤져<BR>
 이름: 익시드 초성: ㅇㅅㄷ 범주: 스킬 힌트: 전사<BR>
 이름: 컨버전 스타포스 초성: ㅋㅂㅈㅅㅌㅍㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 블러드 컨트랙트 초성: ㅂㄹㄷㅋㅌㄹㅌ 범주: 스킬 힌트: 전사<BR>
@@ -2663,7 +2662,7 @@
 이름: 디멘션 소드 초성: ㄷㅁㅅㅅㄷ 범주: 스킬 힌트: 전사<BR>
 이름: 레버넌트 초성: ㄹㅂㄴㅌ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 배틀메이지 -->
+직업명: 배틀메이지<BR>
 이름: 트리플 블로우 초성: ㅌㄹㅍㅂㄹㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 텔레포트 Ver 초성: ㅌㄹㅍㅌㅂㅈㅌ (영문, 특문, 숫자) 범주: 스킬 힌트: 마법사<BR>
 이름: 옐로우 오라 초성: ㅇㄹㅇㅇㄹ 범주: 스킬 힌트: 마법사<BR>
@@ -2694,7 +2693,7 @@
 이름: 그림 리퍼 초성: ㄱㄹㄹㅍ 범주: 스킬 힌트: 마법사<BR>
 이름: 어비셜 라이트닝 초성: ㅇㅂㅅㄹㅇㅌㄴ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 와일드헌터 -->
+직업명: 와일드헌터<BR>
 이름: 포획 초성: ㅍㅎ 범주: 스킬 힌트: 궁수<BR>
 이름: 헌터의 부름 초성: ㅎㅌㅇㅂㄹ 범주: 스킬 힌트: 궁수<BR>
 이름: 더블 샷 초성: ㄷㅂㅅ 범주: 스킬 힌트: 궁수<BR>
@@ -2733,7 +2732,7 @@
 이름: 와일드 발칸 Type X 초성: ㅇㅇㄷㅂㅋㅌㅇㅇㅅ (영문) 범주: 스킬 힌트: 궁수<BR>
 이름: 플래쉬 레인 초성: ㅍㄹㅅㄹㅇ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 메카닉 -->
+직업명: 메카닉<BR>
 이름: 제트 부스터 초성: ㅈㅌㅂㅅㅌ 범주: 스킬 힌트: 해적<BR>
 이름: 히든 피스 초성: ㅎㄷㅍㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 메탈아머 : 휴먼 초성: ㅁㅌㅇㅁㅎㅁ (특문) 범주: 스킬 힌트: 해적<BR>
@@ -2763,7 +2762,7 @@
 이름: 메탈아머 전탄발사 초성: ㅁㅌㅇㅁㅈㅌㅂㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 메카 캐리어 초성: ㅁㅋㅋㄹㅇ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 제논 -->
+직업명: 제논<BR>
 이름: 서플러스 서플라이 초성: ㅅㅍㄹㅅㅅㅍㄹㅇ 범주: 스킬 힌트: 도적<BR>
 이름: 멀티래터럴 초성: ㅁㅌㄹㅌㄹ 범주: 스킬 힌트: 도적<BR>
 이름: 프로멧사 어썰트 초성: ㅍㄹㅁㅅㅇㅆㅌ 범주: 스킬 힌트: 도적<BR>
@@ -2818,7 +2817,7 @@
 이름: 컨파인 인탱글 초성: ㅋㅍㅇㅇㅌㄱ 범주: 스킬 힌트: 도적<BR>
 이름: 멜트다운 익스플로젼 초성: ㅁㅌㄷㅇㅇㅅㅍㄹㅈ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 카이저 -->
+직업명: 카이저<BR>
 이름: 리셔플스위치: 방어모드 초성: ㄹㅅㅍㅅㅇㅊㅂㅇㅁㄷ (특문) 범주: 스킬 힌트: 전사<BR>
 이름: 리셔플스위치: 공격모드 초성: ㄹㅅㅍㅅㅇㅊㄱㄱㅁㄷ (특문) 범주: 스킬 힌트: 전사<BR>
 이름: 버티컬 커넥트 초성: ㅂㅌㅋㅋㄴㅌ 범주: 스킬 힌트: 전사<BR>
@@ -2868,7 +2867,7 @@
 이름: 드라코 슬래셔 초성: ㄷㄹㅋㅅㄹㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 드래곤 블레이즈 초성: ㄷㄹㄱㅂㄹㅇㅈ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 카인 -->
+직업명: 카인<BR>
 이름: 투 툴렌시티 초성: ㅌㅌㄹㅅㅌ 범주: 스킬 힌트: 궁수<BR>
 이름: 프라이어 프리퍼레이션 초성: ㅍㄹㅇㅇㅍㄹㅍㄹㅇㅅ 범주: 스킬 힌트: 궁수<BR>
 이름: 스트라이크 애로우 초성: ㅅㅌㄹㅇㅋㅇㄹㅇ 범주: 스킬 힌트: 궁수<BR>
@@ -2908,7 +2907,7 @@
 이름: 타나토스 디센트 초성: ㅌㄴㅌㅅㄷㅅㅌ 범주: 스킬 힌트: 궁수<BR>
 이름: 그립 오브 애거니 초성: ㄱㄹㅇㅂㅇㄱㄴ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 카데나 -->
+직업명: 카데나<BR>
 이름: 상인단 복귀 초성: ㅅㅇㄷㅂㄱ 범주: 스킬 힌트: 도적<BR>
 이름: 흥정 초성: ㅎㅈ 범주: 스킬 힌트: 도적<BR>
 이름: 인텐시브 인썰트 초성: ㅇㅌㅅㅂㅇㅆㅌ 범주: 스킬 힌트: 도적<BR>
@@ -2944,7 +2943,7 @@
 이름: 체인아츠:메일스트롬 초성: ㅊㅇㅇㅊㅁㅇㅅㅌㄹ (특문) 범주: 스킬 힌트: 도적<BR>
 이름: 웨폰 버라이어티 피날레 초성: ㅇㅍㅂㄹㅇㅇㅌㅍㄴㄹ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 엔젤버스터 -->
+직업명: 엔젤버스터<BR>
 이름: 석세서 초성: ㅅㅅㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 트루 석세서 초성: ㅌㄹㅅㅅㅅ 범주: 스킬 힌트: 해적<BR>
 이름: 매지컬 리프트 초성: ㅁㅈㅋㄹㅍㅌ 범주: 스킬 힌트: 해적<BR>
@@ -2981,7 +2980,7 @@
 이름: 마스코트 패밀리어 초성: ㅁㅅㅋㅌㅍㅁㄹㅇ 범주: 스킬 힌트: 해적<BR>
 이름: 트리니티 퓨전 초성: ㅌㄹㄴㅌㅍㅈ 범주: 스킬 힌트: 해적<BR>
 
-<!-- 아란 -->
+직업명: 아란<BR>
 이름: 컴뱃 스탭 초성: ㅋㅂㅅㅌ 범주: 스킬 힌트: 전사<BR>
 이름: 백 투 리엔 초성: ㅂㅌㄹㅇ 범주: 스킬 힌트: 전사<BR>
 이름: 되찾은 기억 초성: ㄷㅊㅇㄱㅇ 범주: 스킬 힌트: 전사<BR>
@@ -3021,7 +3020,7 @@
 이름: 펜릴 크래시 초성: ㅍㄹㅋㄹㅅ 범주: 스킬 힌트: 전사<BR>
 이름: 블리자드 템페스트 초성: ㅂㄹㅈㄷㅌㅍㅅㅌ 범주: 스킬 힌트: 전사<BR>
   
-<!-- 에반 -->
+직업명: 에반<BR>
 이름: 집으로 초성: ㅈㅇㄹ 범주: 스킬 힌트: 마법사<BR>
 이름: 계승된 의지 초성: ㄱㅅㄷㅇㅈ 범주: 스킬 힌트: 마법사<BR>
 이름: 룬 퍼시스턴스 초성: ㄹㅍㅅㅅㅌㅅ 범주: 스킬 힌트: 마법사<BR>
@@ -3070,7 +3069,7 @@
 이름: 조디악 레이 초성: ㅈㄷㅇㄹㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 스파이럴 오브 마나 초성: ㅅㅍㅇㄹㅇㅂㅁㄴ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 루미너스 -->
+직업명: 루미너스<BR>
 이름: 선파이어 초성: ㅅㅍㅇㅇ 범주: 스킬 힌트: 마법사<BR>
 이름: 이클립스 초성: ㅇㅋㄹㅅ 범주: 스킬 힌트: 마법사<BR>
 이름: 이퀄리브리엄 초성: ㅇㅋㄹㅂㄹㅇ 범주: 스킬 힌트: 마법사<BR>
@@ -3114,7 +3113,7 @@
 이름: 빛과 어둠의 세례 초성: ㅂㄱㅇㄷㅇㅅㄹ 범주: 스킬 힌트: 마법사<BR>
 이름: 리버레이션 오브 초성: ㄹㅂㄹㅇㅅㅇㅂ 범주: 스킬 힌트: 마법사<BR>
   
-<!-- 메르세데스 -->
+직업명: 메르세데스<BR>
 이름: 엘프의 회복 초성: ㅇㅍㅇㅎㅂ 범주: 스킬 힌트: 궁수<BR>
 이름: 엘프의 축복 초성: ㅇㅍㅇㅊㅂ 범주: 스킬 힌트: 궁수<BR>
 이름: 스타일리쉬 무브 초성: ㅅㅌㅇㄹㅅㅁㅂ 범주: 스킬 힌트: 궁수<BR>
@@ -3153,7 +3152,7 @@
 이름: 이르칼라의 숨결 초성: ㅇㄹㅋㄹㅇㅅㄱ 범주: 스킬 힌트: 궁수<BR>
 이름: 로얄 나이츠 초성: ㄹㅇㄴㅇㅊ 범주: 스킬 힌트: 궁수<BR>
   
-<!-- 팬텀 -->
+직업명: 팬텀<BR>
 이름: 스니킹 무브먼트 초성: ㅅㄴㅋㅁㅂㅁㅌ 범주: 스킬 힌트: 도적<BR>
 이름: 루어 초성: ㄹㅇ 범주: 스킬 힌트: 도적<BR>
 이름: 리턴 오브 팬텀 초성: ㄹㅌㅇㅂㅍㅌ 범주: 스킬 힌트: 도적<BR>
@@ -3192,7 +3191,7 @@
 이름: 마크 오브 팬텀 초성: ㅁㅋㅇㅂㅍㅌ 범주: 스킬 힌트: 도적<BR>
 이름: 리프트 브레이크 초성: ㄹㅍㅌㅂㄹㅇㅋ 범주: 스킬 힌트: 도적<BR>
   
-<!-- 은월 -->
+직업명: 은월<BR>
 이름: 축지 초성: ㅊㅈ 범주: 스킬 힌트: 해적<BR>
 이름: 정령친화 초성: ㅈㄹㅊㅎ 범주: 스킬 힌트: 해적<BR>
 이름: 구사 일생 초성: ㄱㅅㅇㅅ 범주: 스킬 힌트: 해적<BR>
@@ -3229,7 +3228,7 @@
 이름: 진 귀참 초성: ㅈㄱㅊ 범주: 스킬 힌트: 해적<BR>
 이름: 파쇄 연권 초성: ㅍㅅㅇㄱ 범주: 스킬 힌트: 해적<BR>
   
-<!-- 칼리 -->
+직업명: 칼리<BR>
 이름: 레미니선스 초성: ㄹㅁㄴㅅㅅ 범주: 스킬 힌트: 도적<BR>
 이름: 매직 서킷 초성: ㅁㅈㅅㅋ 범주: 스킬 힌트: 도적<BR>
 이름: 이네이트 기프트 초성: ㅇㄴㅇㅌㄱㅍㅌ 범주: 스킬 힌트: 도적<BR>
@@ -3653,7 +3652,7 @@
 이름: 시작과 끝의 경계 초성: ㅅㅈㄱㄲㅇㄱㄱ 범주: 필드 힌트: 리멘<BR>
 이름: 존재하지 않는 공간 초성: ㅈㅈㅎㅈㅇㄴㄱㄱ 범주: 필드 힌트: 리멘<BR>
 
-<!-- 6차 스킬(분류 귀찮음) -->
+직업명: 6차 스킬(분류 귀찮음)<BR>
 이름: 스피릿 칼리버 초성: ㅅㅍㄹㅋㄹㅂ 범주: 스킬 힌트: 전사<BR>
 이름: 세이크리드 바스티온 초성: ㅅㅇㅋㄹㄷㅂㅅㅌㅇ 범주: 스킬 힌트: 전사<BR>
 이름: 데드 스페이스 초성: ㄷㄷㅅㅍㅇㅅ 범주: 스킬 힌트: 전사<BR>
@@ -3700,7 +3699,5 @@
 이름: 그라운드 제로 초성: ㄱㄹㅇㄷㅈㄹ 범주: 스킬 힌트: 해적<BR>
 이름: 그랜드 피날레 초성: ㄱㄹㄷㅍㄴㄹ 범주: 스킬 힌트: 해적<BR>
 이름: 가장 오래된 심연 초성: ㄱㅈㅇㄹㄷㅅㅇ 범주: 스킬 힌트: 해적<BR>
-
-  
 </BODY>
 </HTML>
